--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ecommerce</title>
   </head>
-  <body style="direction: rtl">
+  <body style="direction: rtl" class="bg-[#efefef]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
